init project calendar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <form id="myForm">
         Introduce el mes del año
         <input type="text" name="month"/>
+        Itroduce el año
+        <input type="text" name="year" />
         <button type="submit">Imprimir</button>
       </form>
     </div>
